# todo-app

./: LICENSE.md  Makefile  README.md
.github/workflows/: build.yml  build_with_deploy.yml  deploy.yml
backend/: Dockerfile  app.py  pyproject.toml
backend/models/: health.py  item.py
frontend/: package.json
frontend/public/: index.css  index.html
frontend/src/: index.tsx
frontend/src/api/: items-service.ts
frontend/src/components/footer/: Footer.tsx
frontend/src/components/header/: Header.tsx
frontend/src/components/item/: Item.tsx
frontend/src/components/items/: Items.tsx
frontend/src/components/toggle-all/: ToggleAll.tsx
frontend/src/features/: store.ts
frontend/src/features/items/: itemSlice.ts
frontend/src/misc/: App.tsx
frontend/src/shared/: types.ts
